init module promotion

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,7 +5,9 @@
     "/js/admin/branch.js": "/js/admin/branch.js?id=cff6bafc32cc65540223ef1a696eef72",
     "/js/admin/category.js": "/js/admin/category.js?id=0f67806497f8de41379f0ebd071283ca",
     "/js/admin/color.js": "/js/admin/color.js?id=383fca99513fb69940843e7ac908a0bf",
+    "/js/admin/customer.js": "/js/admin/customer.js?id=ef38a129c04f694a32c669a95fb6cc7c",
     "/js/admin/post.js": "/js/admin/post.js?id=4d8860385bd79dc2393b8693f106f064",
     "/js/admin/product.js": "/js/admin/product.js?id=77b48e8e8addfdafbb97f923c41955b7",
+    "/js/admin/promotion.js": "/js/admin/promotion.js?id=700c0f27307d2154dd114d925979310f",
     "/js/admin/setting.js": "/js/admin/setting.js?id=bf4caeca9132504c2ca87fe829495fb4"
 }
