--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,8 +6,9 @@
     "/js/admin/category.js": "/js/admin/category.js?id=0f67806497f8de41379f0ebd071283ca",
     "/js/admin/color.js": "/js/admin/color.js?id=383fca99513fb69940843e7ac908a0bf",
     "/js/admin/customer.js": "/js/admin/customer.js?id=ef38a129c04f694a32c669a95fb6cc7c",
+    "/js/admin/order.js": "/js/admin/order.js?id=3358e2c7e63bdb2c523992380a02f4f4",
     "/js/admin/post.js": "/js/admin/post.js?id=4d8860385bd79dc2393b8693f106f064",
-    "/js/admin/product.js": "/js/admin/product.js?id=77b48e8e8addfdafbb97f923c41955b7",
+    "/js/admin/product.js": "/js/admin/product.js?id=921299bc527849f44c4a72934070a32c",
     "/js/admin/promotion.js": "/js/admin/promotion.js?id=5d97c4092c8a399c15d01dd53455ae81",
     "/js/admin/setting.js": "/js/admin/setting.js?id=bf4caeca9132504c2ca87fe829495fb4"
 }
