update init authentication

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,14 +1,15 @@
 {
-    "/js/admin/admin.js": "/js/admin/admin.js?id=9184776e2777be47868e38fad42e6e33",
+    "/js/admin/admin.js": "/js/admin/admin.js?id=4787017f400dfabc47daaa73fc45900c",
     "/js/admin/create-data.js": "/js/admin/create-data.js?id=844fab3d97cbc2bfd9fee9c7b3957780",
-    "/js/admin/listing.js": "/js/admin/listing.js?id=88034f7bc94292a493ba8bb8fc9e214e",
-    "/js/admin/branch.js": "/js/admin/branch.js?id=cff6bafc32cc65540223ef1a696eef72",
-    "/js/admin/category.js": "/js/admin/category.js?id=0f67806497f8de41379f0ebd071283ca",
-    "/js/admin/color.js": "/js/admin/color.js?id=383fca99513fb69940843e7ac908a0bf",
-    "/js/admin/customer.js": "/js/admin/customer.js?id=ef38a129c04f694a32c669a95fb6cc7c",
-    "/js/admin/order.js": "/js/admin/order.js?id=3358e2c7e63bdb2c523992380a02f4f4",
-    "/js/admin/post.js": "/js/admin/post.js?id=4d8860385bd79dc2393b8693f106f064",
-    "/js/admin/product.js": "/js/admin/product.js?id=921299bc527849f44c4a72934070a32c",
-    "/js/admin/promotion.js": "/js/admin/promotion.js?id=5d97c4092c8a399c15d01dd53455ae81",
+    "/js/admin/listing.js": "/js/admin/listing.js?id=db4542f4a2d6e58d11fdb3da212668ab",
+    "/js/admin/adminUser.js": "/js/admin/adminUser.js?id=afd2771cf1171d200728d3056a47427a",
+    "/js/admin/branch.js": "/js/admin/branch.js?id=25326300afdd31f04a9d31724f4915aa",
+    "/js/admin/category.js": "/js/admin/category.js?id=a01223ffced67ca06a716524974699cf",
+    "/js/admin/color.js": "/js/admin/color.js?id=9c876c262d5dfdccebbf98024876502a",
+    "/js/admin/customer.js": "/js/admin/customer.js?id=098337c31fa8cca9285892e2107af381",
+    "/js/admin/order.js": "/js/admin/order.js?id=db222ca814054ea867e0cd0c72226eac",
+    "/js/admin/post.js": "/js/admin/post.js?id=3d1622c2cf0c0dcc20d8bb5778a0b114",
+    "/js/admin/product.js": "/js/admin/product.js?id=72f69873b5ca71c5c48b7ab7816cc903",
+    "/js/admin/promotion.js": "/js/admin/promotion.js?id=13a9f4935e74a49e71f50c2395a84e1e",
     "/js/admin/setting.js": "/js/admin/setting.js?id=bf4caeca9132504c2ca87fe829495fb4"
 }
